style/style.css
body {
    margin: 0%;
}

html {
    scroll-behavior: smooth;
}


/* --------------------------------------------------------- */

.begin {
    position: fixed;
    display: flex;
    width: 100%;
    height: 70px;
    background-color: black;
    align-items: center;
    justify-content: space-between;
}

.begin a img {
    width: 80px;
    height: 30px;
    padding-left: 8vw;
    align-items: stretch;
}

.begin a img:hover {
    opacity: .8;
}

.button_link_begin li a {
    color: gainsboro;
    text-decoration: none;
    font: bold normal 16px Arial;
    transition: 0.5s;
    padding-right: 50px;
}

.button_link_begin {
    display: flex;
    padding-right: 60px;
}

.button_link_begin a:hover {
    color: rgb(228, 137, 0);
}


/* --------------------------------------------------------- */

.title {
    background: linear-gradient(to right, rgba(0, 0, 0, .6), rgba(0, 0, 0, .6)), url(../images/background_img.jpg);
    height: 450px;
    padding-top: 200px;
}

.title_content {
    display: flex;
    justify-content: space-between;
    margin-left: 8vw;
    margin-right: 8vw;
    /* border: 1px solid red; */
}

.left_content hr {
    margin-left: 0;
    width: 100px;
    border: none;
    background-color: white;
    height: 2px;
}

.left_content {
    width: 600px;
    /* border: 1px solid green; */
}

.left_content p {
    width: 460px;
    color: white;
    font: normal 26px Arial;
}

.text_left_content {
    font: normal 16px/23px Arial;
    text-align: justify;
    color: rgba(255, 255, 255, 0.555);
    width: 550px;
}

.left_button {
    font: bold 16px Arial;
    margin-top: 30px;
    display: inline-block;
    width: 120px;
    padding: 10px;
    color: #fff;
    border: 2px solid #fff;
    text-align: center;
    outline: none;
    text-decoration: none;
    transition: 0.5s;
}

.left_button:hover {
    border: 2px solid rgb(228, 137, 0);
    color: rgb(228, 137, 0);
}

.left_button:active {
    border: 2px solid rgb(138, 83, 1);
    color: rgb(138, 83, 1);
}


/* ---------------------------- */

.right_content {
    /* border: 2px solid rgb(228, 137, 0); */
    width: 360px;
    height: 360px;
    background-color: #f5f5f5;
    border-radius: 10px;
    text-align: center;
}

.text_right_content {
    padding-top: 20px;
    height: 40px;
    color: #33333f;
    font: bold normal 23px Arial;
}

.text_right_content span {
    color: #ff8b38;
}


/*  FORM   */

.form_right_content {
    background-color: white;
}

.right_content input {
    background: white;
    color: #bfbfcb;
    margin: 30px;
    padding: 0px;
    border: none;
    outline: none;
    box-shadow: inset 0px -1px 0px #bfbfcb;
}

.right_content button {
    font: bold normal 16px Arial;
    background-color: #ff8b38;
    border: none;
    color: white;
    width: 360px;
    height: 75px;
    border-radius: 0px 0px 10px 10px;
}

.right_content button:hover {
    background-color: #fc7515f8;
}


/*  FORM   */


/* --------------------------------------------------------- */

.title_down {
    width: 100%;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.5);
    margin-bottom: 3px;
}

.icons {
    padding-right: 100px;
    display: flex;
    list-style-type: none;
}

.title_down_text {
    padding-left: 8vw;
    width: 350px;
}

.title_down_text h2 {
    color: rgb(51, 51, 51);
    margin: 0%;
    padding-bottom: 5px;
    font: bold 20px/25px Arial;
}

.title_down_text p {
    color: rgb(141, 142, 146);
    margin: 0%;
    padding-bottom: 5px;
    font: 15px/20px Arial;
}

.icons li img {
    transition: 0.5s;
    opacity: .2;
    width: 50px;
    margin: 20px;
}

.icons li img:hover {
    opacity: 1;
    transform: scale(1.2);
    filter: invert(57%) sepia(72%) saturate(2665%) hue-rotate(8deg) brightness(98%) contrast(101%);
}


/* --------------------------------- */

.features {
    height: 600px;
    background-color: rgb(243, 243, 243);
}

.features_button_tab {
    list-style-type: none;
    margin: auto;
}

.features_button_tab li button {
    font: bold normal 16px Arial;
    background-color: #363432;
    border: none;
    color: white;
    width: 100px;
    height: 100px;
}

.features_button_tab li button:hover {
    background-color: #fc7515f8;
}


/* --------------------------------- */

.sub_list_section {
    display: flex;
    height: 600px;
    background-color: rgb(255, 255, 255);
    justify-content: space-between;
    /* margin-left: 8vw; */
    /* margin-right: 8vw; */
}

.sub_left_content img {
    margin-left: 8vw;
    /* justify-content: space-between; */
    margin-top: 150px;
    /* border: 1px solid red; */
    box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.2);
}

.sub_list_section hr {
    margin-left: 0;
    width: 70px;
    border: none;
    background-color: rgb(231, 127, 8);
    height: 2px;
}

.sub_right_content {
    width: 450px;
    padding-top: 100px;
    margin-right: 8vw;
    /* border: 1px solid red; */
}

.sub_right_content h2 {
    font: bold 20px/25px Arial;
    color: #2e2e30;
}

.sub_right_content p {
    font: 15px/20px Arial;
    color: #939396;
}

.element_upload,
.element_download {
    /* border: 1px solid red; */
    display: flex;
    padding-top: 20px;
}

.icon_u,
.icon_d {
    padding-top: 10px;
}

.text {
    font: bold 15px/20px Arial;
    color: #3f3f3f;
}

.icon_u:before {
    content: "\f0ee";
    font-family: FontAwesome;
    border: 2px solid #ff8b38;
    border-radius: 100px;
    color: #ff8b38;
    padding: 10px;
    margin-right: 20px;
}

.icon_d:before {
    content: "\f0ed";
    font-family: FontAwesome;
    border: 2px solid #ff8b38;
    border-radius: 100px;
    color: #ff8b38;
    padding: 10px;
    margin-right: 20px;
}


/* --------------------------------- */


/* --------------------------------- */

.standart_picture_section {
    display: flex;
    height: 600px;
    background-color: rgb(243, 243, 243);
    justify-content: space-between;
}

.standart_left_content {
    margin-left: 8vw;
    width: 450px;
    padding-top: 100px;
}

.standart_left_content h2 {
    font: bold 20px/25px Arial;
    color: #2e2e30;
}

.standart_left_content hr {
    margin-left: 0;
    width: 70px;
    border: none;
    background-color: rgb(231, 127, 8);
    height: 2px;
}

.standart_left_content p {
    font: 15px/20px Arial;
    color: #939396;
}

.standart_right_content img {
    margin-right: 8vw;
    margin-top: 150px;
    box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.2);
}


/* --------------------------------- */


/* --------------------------------- */

.awesome {
    height: 600px;
    background-color: rgb(255, 255, 255);
    justify-content: space-between;
    text-align: center;
}


/* --------------------------------- */


/* --------------------------------- */

.pricing {
    height: 600px;
    background-color: rgb(243, 243, 243);
    justify-content: space-between;
    text-align: center
}


/* --------------------------------- */


/* --------------------------------- */

.costumers {
    height: 500px;
    background-color: rgb(255, 255, 255);
    /* border: 1px solid red; */
}

.costumers .text {
    flex-direction: column;
    /* border: 1px solid red; */
}

.costumers .text hr {
    margin-left: 0;
    width: 70px;
    border: none;
    background-color: rgb(231, 127, 8);
    height: 2px;
    margin: auto;
}

.costumers .text p {
    font: 15px/20px Arial;
    color: #939396;
    text-align: center;
}

.costumers .text h1 {
    color: rgba(22, 21, 21, 0.801);
    text-transform: uppercase;
    font-weight: normal;
    text-align: center;
}

.cloud {
    display: flex;
    justify-content: center;
}

.cloud_a {
    margin: 40px 60px;
    text-align: center;
    width: 270px;
    height: 150px;
    border-radius: 5px;
    background-color: #f3f3f5;
    position: relative;
}

.cloud_a:before {
    position: absolute;
    content: "";
    right: 80%;
    top: 100%;
    width: 0;
    height: 0;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-top: 20px solid #f3f3f5;
}

#text_in_cloud {
    font: 15px/20px Arial;
    color: #939396;
    text-align: left;
    margin: 15px;
    font-style: italic;
}

.avatar {
    margin-top: 70px;
    display: flex;
    /* border: 1px solid red; */
}

.avatar img {
    margin-right: 20px;
}

.text_a {
    display: flex;
    flex-direction: column;
    align-self: center;
}

.text_a p {
    margin: 5px;
    font-style: bold;
    font: 15px/20px Arial;
    color: #939396;
    text-align: left;
}

.text_a h2 {
    font: bold 20px/20px Arial;
    color: #414141;
    margin: 5px;
}


/* --------------------------------- */


/* --------------------------------- */

.stylish {
    height: 300px;
    background: linear-gradient(to right, rgba(0, 0, 0, .6), rgba(0, 0, 0, .6)), url(../images/bottom-bg.jpg) no-repeat;
    background-size: 100%;
}

.stylish {
    height: 500px;
    background-color: rgb(255, 255, 255);
    /* border: 1px solid red; */
}

.stylish .text {
    flex-direction: column;
    /* border: 1px solid red; */
}

.stylish .text hr {
    margin-left: 0;
    width: 70px;
    border: none;
    background-color: rgb(255, 255, 255);
    height: 2px;
    margin: auto;
}

.stylish .text p {
    font: 15px/20px Arial;
    color: #9e9e9e;
    text-align: center;
}

.stylish .text h1 {
    color: rgba(255, 255, 255, 0.801);
    text-transform: uppercase;
    font-weight: normal;
    text-align: center;
}

